--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,31 +1,40 @@
-name: Azure Function Deploy
+name: Deploy Python project to Azure Function App
 
 on:
-  push:
-    branches:
-      - main
+  [push]
+
+env:
+  AZURE_FUNCTIONAPP_NAME: 'Basecamp-Email-Forwarding-automation'   
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       
+  PYTHON_VERSION: '3.11'                    
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
+    environment: dev
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v3
+
+    - name: Setup Python ${{ env.PYTHON_VERSION }} Environment
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.11.x' 
-      
-    - name: Install dependencies
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: 'Resolve Project Dependencies Using Pip'
+      shell: bash
       run: |
-        pip install -r requirements.txt 
-        
-    - name: Deploy to Azure Function
-      uses: azure/webapps-deploy@v2
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+        popd
+
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
       with:
-        app-name: 'Basecamp-Email-Forwarding-automation'
-        publish-profile: ${{ secrets.AZURE_FUNCTION_APP_PUBLISH_PROFILE }}
+        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
         scm-do-build-during-deployment: true
         enable-oryx-build: true
