--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:ec52fd2927ad8ae64bb9ebba42b774d3390bbf9e008cc145eacda508314b4a22
-size 209
+# DO NOT include azure-functions-worker in this file
+# The Python Worker is managed by Azure Functions platform
+# Manually managing azure-functions-worker may cause unexpected issues
+# version https://git-lfs.github.com/spec/v1
+
+azure-functions
+basecampy3
