--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'Basecamp-Email-Forwarding-automation'   
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'TimerTrigger'       
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       
   PYTHON_VERSION: '3.11'                    
 
 jobs:
@@ -33,7 +33,6 @@ jobs:
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
-      id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
