--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,7 +32,7 @@ jobs:
         popd 
 
     - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
+      uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
