--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:453b99d4b0c941067c6a8055641634b2ca9e37611d14102b379d05aaf5b205fa
-size 255
+# DO NOT include azure-functions-worker in this file
+# The Python Worker is managed by Azure Functions platform
+# Manually managing azure-functions-worker may cause unexpected issues
+# version https://git-lfs.github.com/spec/v1
+
+azure-functions
+basecampy3
