--- a/.github/workflows/main_basecamp-email-forwarding-automation.yml
+++ b/.github/workflows/main_basecamp-email-forwarding-automation.yml
@@ -47,29 +47,19 @@ jobs:
             release.zip
             !venv/
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-function.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip     
-        
-      - name: 'Deploy to Azure Functions'
-        uses: Azure/functions-action@v1
-        id: deploy-to-function
-        with:
-          app-name: 'Basecamp-Email-Forwarding-automation'
-          slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          scm-do-build-during-deployment: true
-          enable-oryx-build: true
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EFB54D1E950A4912A045AB328AA11539 }}
+            deploy:
+              runs-on: ubuntu-latest
+              needs: build
+              
+              steps:
+                - name: Download artifact from build job
+                  uses: actions/download-artifact@v2
+                  with:
+                    name: python-app
+          
+                - name: Deploy to Azure Functions
+                  uses: azure/functions-action@v1
+                  with:
+                    app-name: 'Basecamp-Email-Forwarding-automation'
+                    package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+                    publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EFB54D1E950A4912A045AB328AA11539 }}
