--- a/.github/workflows/basecamp-email-forwarding-automation.yml
+++ b/.github/workflows/basecamp-email-forwarding-automation.yml
@@ -50,26 +50,20 @@ jobs:
   deploy:
               runs-on: ubuntu-latest
               needs: build
-              environment:
-                name: 'Production'
-                url: ${{ steps.deploy-to-function.outputs.webapp-url }}
               
               steps:
                 - name: Download artifact from build job
-                  uses: actions/download-artifact@v3
+                  uses: actions/download-artifact@v2
                   with:
                     name: python-app
-          
+
                 - name: Unzip artifact for deployment
                   run: unzip release.zip     
-                  
-                - name: 'Deploy to Azure Functions'
-                  uses: Azure/functions-action@v1
-                  id: deploy-to-function
+          
+                - name: Deploy to Azure Functions
+                  uses: azure/functions-action@v1
                   with:
                     app-name: 'Basecamp-Email-Forwarding-automation'
-                    slot-name: 'Production'
                     package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-                    scm-do-build-during-deployment: true
-                    enable-oryx-build: true
                     publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EFB54D1E950A4912A045AB328AA11539 }}
+  
